# Greedy_Snake

./: .gitignore  CMakeLists.txt  README.md  makefile.ref
include/: Point.h  Snake.h
include/kbhit/: kbhit.h
source/: Snake.cc  main.cc
